RESOLVED FIXED11453
REGRESSION: Status bar always shows cancelled opening the page
https://bugs.webkit.org/show_bug.cgi?id=11453
Summary REGRESSION: Status bar always shows cancelled opening the page
James Mitchell
Reported 2006-10-29 17:35:30 PST
Load any url and the status bar will show 'Cancelled opening the page'. The activity viewier will also show many items as cancelled, but the page loads complete and without error. WebKit r17425
Attachments
Activity window (29.74 KB, image/png)
2006-11-01 13:12 PST, Kevin M. Dean
no flags
patch to fix the problem; no layout test, though (1.32 KB, patch)
2006-11-04 17:21 PST, Darin Adler
andersca: review+
Kevin M. Dean
Comment 1 2006-11-01 13:10:23 PST
I'm seeing this too with r17515. The Activity window is also showing a variety of items as cancelled even though the page has loaded fine.
Kevin M. Dean
Comment 2 2006-11-01 13:12:36 PST
Created attachment 11335 [details] Activity window
Darin Adler
Comment 3 2006-11-04 17:21:42 PST
Created attachment 11383 [details] patch to fix the problem; no layout test, though
Anders Carlsson
Comment 4 2006-11-04 17:23:21 PST
Comment on attachment 11383 [details] patch to fix the problem; no layout test, though r=me
Darin Adler
Comment 5 2006-11-04 17:24:08 PST
Committed revision 17598.
Note You need to log in before you can comment on or make changes to this bug.