third_party/WebKit/WebCore/platform/network/mac/ResourceHandleMac.mm
@@ -45,8 +45,6 @@ ResourceHandleInternal::~ResourceHandleInternal()
 
 ResourceHandle::~ResourceHandle()
 {
-    if (d->m_subresourceLoader)
-        d->m_subresourceLoader->cancel();
     delete d;
 }
 
